# learn-pendulum

./: README.md  learn_pendulum.ipynb  pyproject.toml
