[tool.poetry]
name = "learn_pendulum"
version = "0.1.0"
description = "Learning the Python package, `pendulum`, for improved time management"
authors = ["Larry Jones <larry.jones@reveal-energy.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
